--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Level 1</title>
 </head>
 
 <body>
-    <p>adjgfhd,kjdfa</p>
+    <h1>Hello CSS Level 1 </h1>
 </body>
 
 </html>
