--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,14 @@
 
 <body>
     <h1>Hello CSS Level 1 </h1>
+    <h1 id="heading2">Heading two</h1>
+    <h1 id="heading3">Heading three</h1>
+    <p id="heading2">paragraph also same color to the given id</p>
     <p>this is a paragraph.</p>
+    <h2 class="myClass">heading two class selector.</h2>
+    <p class="myClass">paragraph will be the same color as heading 2 </p>
     <button>click me!</button>
+    <h2>HExadecimal style </h2>
 </body>
 
 </html>
