--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,20 @@
     <p class="myClass">paragraph will be the same color as heading 2 </p>
     <button>click me!</button>
     <h2>HExadecimal style </h2>
+    <hr>
+    <u>Practice 1</u>
+    <p>part 1</p>
+    <div id="box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quae illo laudantium tenetur expedita voluptatum
+        sit nemo, praesentium consectetur aliquid nostrum accusamus molestiae, eaque voluptas! Saepe consectetur libero
+        officiis repellat!
+    </div>
+    <hr>
+    <p>Part 2</p>
+    <h3 class="heading">Heading 3</h3>
+    <h4 class="heading">Heading 4</h4>
+    <h5 class="heading">Heading 5</h5>
+    <hr>
 </body>
 
 </html>
