--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,44 @@
     <h4 class="heading">Heading 4</h4>
     <h5 class="heading">Heading 5</h5>
     <hr>
+    <h6>Text alignment </h6>
+    <!-- use inline style for text black color -->
+    <p style="color: black;" id="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, hic nulla
+        voluptatem
+        explicabo,
+        molestias magni
+        minima tempora veniam fugiat quia temporibus neque dolorum esse laudantium aliquid dicta rem exercitationem in.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam atque, eius praesentium alias cupiditate, minus
+        quos consequuntur rem odit aliquid sunt voluptatem voluptatibus fuga. Eveniet reiciendis harum nihil voluptatem
+        ipsam?
+        Similique rem, voluptas magni provident pariatur sit commodi, debitis porro odio asperiores esse minima,
+        quisquam expedita illum adipisci quam. Enim aut accusamus vel soluta similique porro provident tempora ut sequi.
+        Nostrum eaque magnam animi fugiat itaque quibusdam vero laudantium beatae quae facere in repellat voluptatibus,
+        autem quisquam perspiciatis numquam a necessitatibus accusamus dolorum incidunt nam eligendi soluta omnis?
+        Laborum, impedit!
+        Cumque velit fugit, at, ullam quae ut ad quas odio ex voluptates asperiores temporibus veniam possimus
+        blanditiis illum natus nihil fugiat dolores id nobis! Impedit eos iste accusamus voluptatibus assumenda?
+        Dolore, eveniet totam reiciendis fuga culpa earum molestias minus praesentium omnis quasi facere quis quae
+        quaerat quia dicta corrupti fugiat quod consequatur nesciunt magni ratione non nemo vel! Corporis, quaerat!
+        Consequuntur, eveniet soluta libero aliquid quasi necessitatibus architecto dicta dolorum voluptatem placeat
+        reprehenderit cum beatae eum corrupti, aliquam cupiditate repellat aspernatur, dignissimos iste numquam maxime
+        nostrum quis a. Dolorum, odit?</p>
+    <hr>
+    <p style="color: black;" id="para"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sequi autem
+        voluptate beatae nobis mollitia exercitationem. Aliquid, laboriosam. Minima vitae magni magnam repellendus! Nisi
+        dicta fuga maxime provident adipisci repudiandae!
+        Enim officia magnam soluta nihil dignissimos asperiores, minus, deleniti tenetur veniam libero magni cupiditate.
+        Dolor doloremque corporis obcaecati laboriosam omnis recusandae perferendis eveniet magni, architecto mollitia
+        iusto necessitatibus exercitationem rem?
+        Beatae necessitatibus sint quos, libero labore inventore voluptas ullam alias. Similique laboriosam inventore
+        esse eveniet error exercitationem deleniti, maiores fuga? Fugit cumque voluptates aliquid nostrum molestias
+        neque velit dolore recusandae.
+        Id eveniet nam obcaecati placeat repellendus voluptas, dolorem velit maiores temporibus aliquam autem suscipit
+        voluptatibus cupiditate illo omnis a quisquam. Est ullam atque sunt praesentium nostrum modi nemo magni ea!
+        Ut sint ab nesciunt eius earum rerum? Possimus nostrum vero, molestiae quisquam adipisci esse eos ut, similique
+        veniam, ab voluptatem. Quos sed velit possimus nam nobis fuga fugiat quasi corporis!</p>
+    <h1 style="color: blue;" id="h1">Text alignment apply on heading1</h1>
+    <p>In advance css there are some new features are added like: right = start , left = end </p>
 </body>
 
 </html>
