--- a/Index.html
+++ b/Index.html
@@ -71,6 +71,15 @@
         veniam, ab voluptatem. Quos sed velit possimus nam nobis fuga fugiat quasi corporis!</p>
     <h1 style="color: blue;" id="h1">Text alignment apply on heading1</h1>
     <p>In advance css there are some new features are added like: right = start , left = end </p>
+    <hr>
+    <h2 style="color: red;" id="deco">Text Decoration</h2>
+    <h2 style="color: red;" id="deco1">Underline</h2>
+    <h2 style="color: red;" id="deco2">Overline</h2>
+    <h2 style="color: red;" id="deco3">Line-Through</h2>
+
+
+
+
 </body>
 
 </html>
