--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,92 @@
     <h2 style="color: red;" id="deco1">Underline</h2>
     <h2 style="color: red;" id="deco2">Overline</h2>
     <h2 style="color: red;" id="deco3">Line-Through</h2>
+    <!-- to erase the underline from the link,Which is auto generated -->
+    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"> Click the MDN web site link for advance knowledge ! </a>
+    <hr>
+    <p style="color:black">Font-weight</p>
+    <h1 style="color: black ;text-align: start;" id="h1">Heading1</h1>
+    <h1 style="color: black;" id="h2">Heading2</h1>
+    <h1 style="color: black;" id="h3">Heading3</h1>
+    <h1 style="color: black;" id="h4">Heading4</h1>
+    <hr>
+    <p style="color: black;">Font-family</p>
+    <p id="one" style="color: black;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente laudantium odio
+        est ipsum similique
+        magnam aliquid placeat quidem ea voluptate! Assumenda nostrum veniam asperiores adipisci earum omnis autem nisi
+        ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero excepturi consequatur ab debitis
+        aliquam, commodi rerum non quae assumenda? Architecto facere ea perferendis delectus cum quaerat obcaecati, quos
+        nihil possimus?</p>
+    <p id="two" style="color: black;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente laudantium odio
+        est ipsum similique
+        magnam aliquid placeat quidem ea voluptate! Assumenda nostrum veniam asperiores adipisci earum omnis autem nisi
+        ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero excepturi consequatur ab debitis
+        aliquam, commodi rerum non quae assumenda? Architecto facere ea perferendis delectus cum quaerat obcaecati, quos
+        nihil possimus?</p>
+    <hr>
+    <p style="color: black;">Units in CSS (Absolute)</p>
+    <h1 style="color: black;" id="one1"> Heading1</h1>
+    <h1 style="color: black;" id="two2"> Heading2</h1>
+    <hr>
+    <div>
+        <p><b> Line height</b></p>
+        <h1 style="color: black;" id="on"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore excepturi
+            labore
+            officia facere quae iure, mollitia impedit officiis cupiditate tenetur eius deserunt laudantium sapiente
+            inventore nam consequatur pariatur laborum autem. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Quasi, sed? Deserunt doloremque unde illo quam saepe explicabo dolore voluptatibus tempora culpa, magni est
+            reiciendis aspernatur illum voluptate excepturi accusamus consequatur?</h1>
+        <h1 style="color: black;" id="tw">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus itaque
+            necessitatibus modi quos, aliquam est id illo molestiae enim, animi, commodi deserunt tempore! Perspiciatis
+            ducimus quasi commodi sunt temporibus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Doloremque
+            quibusdam labore sunt saepe! Voluptas odit accusantium corrupti dolor quae totam fuga fugiat! Unde quia
+            quasi
+            delectus perspiciatis minus accusamus officiis.</h1>
+    </div>
+    <hr>
+    <div>
+        <p style="color: black;" id="div"><b> Text Transform property.</b></p>
+        <p id="div">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque ducimus culpa molestias explicabo
+            voluptatibus ratione fugit, corporis itaque cupiditate ullam repudiandae, reiciendis sunt omnis veritatis.
+            Sapiente illum doloribus dolorem. Quia?</p>
 
+        <p id="div1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque ducimus culpa molestias explicabo
+            voluptatibus ratione fugit, corporis itaque cupiditate ullam repudiandae, reiciendis sunt omnis veritatis.
+            Sapiente illum doloribus dolorem. Quia?</p>
+    </div>
+    <hr>
+    <div>
+        <p style="text-decoration: underline wavy;"><b>Practice set:2</b></p>
+        <p style="color: blueviolet;">Qustion 1</p>
+        <h1 style="color: black;" id="Q1"> Practice two question number one</h1>
+        <p style="color: blueviolet;">Qustion 2</p>
+        <p class="newRoman"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus quas est suscipit animi
+            magni
+            hic?
+            Odit,
+            consectetur officiis iusto, sequi ipsam laboriosam soluta nostrum nam obcaecati eum quod pariatur aliquam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae iusto nesciunt odio eaque facere labore,
+            dicta amet reiciendis explicabo dolores natus accusantium consectetur magni aliquam rerum excepturi omnis
+            incidunt dolorem!
+        </p>
+
+    </div>
+    <p style="color: blueviolet;">Qustion 3</p>
+    <div id="outer">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cumque ducimus animi praesentium fugit ipsum
+            maxime laborum id et aspernatur consequatur temporibus, error, voluptates illum delectus fuga tenetur soluta
+            asperiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sit minus accusantium
+            minima architecto quisquam, maxime iure provident facilis vero? Aspernatur molestiae quae ullam quo quasi
+            quaerat, at omnis ipsam.</p>
+        <div id="inner">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate illo quidem consequatur quos atque!
+                Quibusdam vitae quam, explicabo perferendis quisquam facilis? Laboriosam cum doloribus possimus
+                repellendus ad? Voluptatum, veritatis vitae? Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Sit dolor dolorum rerum eum architecto blanditiis maxime? Consectetur, asperiores quaerat. Dignissimos
+                sequi, aliquam facilis quibusdam maxime cumque laborum cum harum hic?</p>
+        </div>
+    </div>
 
 
 
