margin padding border height width

--- a/csslevel2/index2.html
+++ b/csslevel2/index2.html
@@ -9,6 +9,58 @@
 </head>
 
 <body>
+    <h1>Box model in Css</h1>
+
+    <ul>
+        <li>Height</li>
+        <li>Width</li>
+        <li>Border</li>
+        <li>Padding</li>
+        <li>Marging</li>
+    </ul>
+    <div>
+        Heading
+    </div>
+    <h2>Border shorthand : width style color</h2>
+    <h2 id="brdr">Border radius </h2>
+    <div id="div1">Div1</div><br>
+    <div id="div2">Div2</div><br>
+
+    <hr>
+    <h2 id="brdr">Padding: left, right, bottom, top </h2>
+    <div id="div3">Div3 : Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illum cumque nihil
+        perspiciatis tempore, sint animi porro repellat omnis, iste, incidunt veniam. Maxime, ea id magni iusto facere
+        corporis incidunt? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum eos enim modi
+        repudiandae, perspiciatis perferendis culpa? Quia odio reprehenderit qui voluptates consequuntur quos itaque
+        obcaecati pariatur possimus sapiente? Quae, pariatur.
+        Possimus aspernatur porro id accusantium distinctio dignissimos veniam rem inventore magnam ut quaerat modi
+        quasi iste tenetur voluptates commodi recusandae cumque, ratione obcaecati culpa aliquid excepturi perferendis
+        optio! Voluptatibus, dicta?
+        Culpa enim temporibus fugit iure quidem magni mollitia sunt. Et cumque ea perspiciatis repudiandae vitae nostrum
+        rerum. Aut ad labore eos dolorum sequi ratione reprehenderit, doloribus tempora consequatur, similique sint.
+    </div>
+    <br>
+    <h2 id="brdr">Padding shorthand: top right bottom left (Clockwise)</h2>
+    <h2 id="brdr">Padding:50px; (it means all sides have 50px Padding)</h2>
+    <hr>
+    <h2 id="brdr"> Margin : left, right, bottom, top</h2>
+    <div id="mrgn">Div1</div><br>
+    <div id="mrgn">Div2</div><br>
+    <h2 id="brdr">Margin shorthand: top right bottom left (Clockwise)</h2>
+    <h2 id="brdr">Margin:50px; (it means all sides have 50px Margin)</h2>
+    <hr>
+    <h2 id="brdr"> Practice : 3</h2>
+    <div id="navbar">
+        <a href="https://www.amazon.in" id="log">amazon.in</a>
+        <a>My Account</a>
+        <a>My Cart</a>
+        <a>Contact Us </a>
+        <input placeholder="search amazon.in">
+        <button>search</button>
+
+
+    </div>
+
 
 </body>
 
