add background images and its size

--- a/cssLevel3/index3.html
+++ b/cssLevel3/index3.html
@@ -53,6 +53,15 @@
     <div id="boxii" style="background-color:aqua ;">box2 (relative) </div>
     <div id="boxiii" style="background-color:brown ;">box3(absolute)</div>
     <div id="boxiv" style="background-color:chartreuse ;">box4(fixed)</div>
+    <hr>
+    <br><br><br><br><br><br><br><br><br>
+    <h3>Back ground image/size property.</h3>
+    <p>image form unsplash website</p>
+    <div id="b" style="background-color:darkgoldenrod ;">box1(cover)</div>
+    <div id="bo" style="background-color:aqua ;">box2(contain) </div>
+    <div id="box" style="background-color:brown ;">box3(auto)</div>
+    <div id="boxv" style="background-color:chartreuse ;">box4</div>
+
 </body>
 
 </html>
