now we add flexbox layout in html and css file

--- a/cssLevel4/index4.html
+++ b/cssLevel4/index4.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+    <h1 style="text-align: center;">CSS LEVEL 4</h1>
+    <h4><u>Flexbox</u></h4>
+    <div id="container">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div>
 </body>
 
 </html>
