add flex direction, flex content ,felx wrap, align item

--- a/cssLevel4/index4.html
+++ b/cssLevel4/index4.html
@@ -11,6 +11,10 @@
 <body>
     <h1 style="text-align: center;">CSS LEVEL 4</h1>
     <h4><u>Flexbox</u></h4>
+    <ul>
+        <li style="text-align: left;">Flex-direction</li>
+    </ul>
+    <p>Row-reverse</p>
     <div id="container">
         <div id="box1" style="background-color: aqua;">Box1</div>
         <div id="box2" style="background-color:blueviolet;">Box2</div>
@@ -18,6 +22,108 @@
         <div id="box4" style="background-color:darkblue;">Box4</div>
         <div id="box5" style="background-color:darkslategray;">Box5</div>
     </div>
+    <br>
+    <p>Column</p>
+    <div id="container1">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div>
+    <br>
+    <p>Column-reverse</p>
+    <div id="container2">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div>
+    <br>
+    <p>flex can fix its size in given size container.</p>
+    <div id="container3">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div>
+    <br>
+    <p> flex can fix its size in given size container until its font size is capable otherwise out to the container.</p>
+    <div id="container4">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div>
+    <br>
+    <hr>
+    <ul>
+        <li style="text-align: left;">Flex properry for flex container.</li>
+    </ul>
+    <br>
+    <p style="text-align: left;"><u><b>Justify content : alignment along the main axis</b></u><br></p>
+    <div id="container5">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <p>/* we can add flex-start/centre/end/space-around/space-between/space-evenly */</p>
+    <div id="container5x">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <p style="text-align: left;"><u><b>Align-item : alignment along the cross axis.</b></u><br></p>
+    <div id="container6">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div class="box2" style="background-color:blueviolet;">Box2</div>
+        <div class="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <div id="container6x">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div class="box2" style="background-color:blueviolet;">Box2</div>
+        <div class="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <div id="container6xx">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div class="box2" style="background-color:blueviolet;">Box2</div>
+        <div class="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <div id="container7">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <div id="container8">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+    <div id="container9">
+        <div id="box1" style="background-color: aqua;">Box1</div>
+        <div id="box2" style="background-color:blueviolet;">Box2</div>
+        <div id="box3" style="background-color:crimson;">Box3</div>
+        <div id="box4" style="background-color:darkblue;">Box4</div>
+        <div id="box5" style="background-color:darkslategray;">Box5</div>
+    </div><br>
+
 </body>
 
 </html>
