complete animation properties

--- a/Animation/animation.html
+++ b/Animation/animation.html
@@ -18,6 +18,7 @@
     <p>name /duration /timingfunction /delay /iteration /direction</p>
     <p>animation:myName 2s linear 3s infinite normal</p>
     <div class="div31">Animation shorthand</div>
+    <div class="div3y">Animation Percentage</div>
 
 </body>
 
