--- a/CSSProject1/project1.html
+++ b/CSSProject1/project1.html
@@ -73,11 +73,148 @@
 
     <!-- shop section -->
     <div class="shop-section">
-        <div class="Box1"></div>
-        <div class="Box2"></div>
-        <div class="Box3"></div>
-        <div class="Box4"></div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Clothes</h2>
+                <div class="box-img" style="background-image: url(box1_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url(box2_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Table & Chare</h2>
+                <div class="box-img" style="background-image: url(box3_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Automotive</h2>
+                <div class="box-img" style="background-image: url(box4_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Beauty picks</h2>
+                <div class="box-img" style="background-image: url(box5_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Pet Care</h2>
+                <div class="box-img" style="background-image: url(box6_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>New Arrival in Toys</h2>
+                <div class="box-img" style="background-image: url(box7_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Accessories</h2>
+                <div class="box-img" style="background-image: url(box8_image.jpg);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Tools</h2>
+                <div class="box-img" style="background-image: url(box9_image.png);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Watch</h2>
+                <div class="box-img" style="background-image: url(box10_image.png);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Smart Watch</h2>
+                <div class="box-img" style="background-image: url(box11_image.png);"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Gaming</h2>
+                <div class="box-img" style="background-image: url(box12_image.png);"></div>
+                <p>See more</p>
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="foot-panel1">
+            Back to Top
+        </div>
+        <div class="foot-panel2">
+            <ul>
+                <p> Get to Know Us</p>
+                <a> Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a> Investor Relations</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p> Get to Know Us</p>
+                <a> Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a> Investor Relations</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p> Get to Know Us</p>
+                <a> Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a> Investor Relations</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p> Get to Know Us</p>
+                <a> Careers</a>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a> Investor Relations</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Science</a>
+            </ul>
+        </div>
+        <div class="foot-panel3">
+            <div class="logo"></div>
+        </div>
+
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Conditions of use</a>
+                <a>Privacy Notice</a>
+                <a>Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">
+                © 1996-2024, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
